
PROJECT(Chat)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CHAT_HEADERS
network.h
anyoption.h
aes256.hpp
)

SET(CHAT_NET_SOURCES
main.cpp
network.cpp
anyoption.cpp
aes256.cpp
)

SOURCE_GROUP("Header Files" FILES ${CHAT_NET_HEADERS})
SOURCE_GROUP("Source Files" FILES ${CHAT_NET_SOURCES})

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_net REQUIRED)

INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    ${SDL_NET_INCLUDE_DIRS}    
)

ADD_EXECUTABLE(Chat ${CHAT_NET_HEADERS} ${CHAT_NET_SOURCES})

TARGET_LINK_LIBRARIES(Chat
    ${SDL_LIBRARY}
    ${SDLNET_LIBRARY}
)


